bounded wirldcard